maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:6: error: not found: value verfifierMurGauche
  while(!verfifierMurGauche()){
         ^